# Robotica

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  Robotics.sln  install-packages.sh
App/App/: App.csproj  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BlueTooth.cs  MainPage.xaml  MainPage.xaml.cs  Message.cs  StatusPage.xaml  StatusPage.xaml.cs
App/AppTests/: ExampleTest.cs
App/RoboticaApp/: RoboticaApp.sln
App/RoboticaApp/RoboticaApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  RoboticaApp.csproj
Robotics/: Robotics.cpp  Robotics.vcxproj  Robotics.vcxproj.filters  accelerator.cpp  accelerator.h  bluetooth.cpp  bluetooth.h  camera.cpp  camera.h  controller.cpp  controller.h  frequence.cpp  frequence.h  grab_arm.cpp  grab_arm.h  image_data.cpp  image_data.h  led.cpp  led.h  medicine_box.cpp  medicine_box.h  microphone.cpp  microphone.h  opencv.cpp  opencv.h  parser.cpp  parser.h  pch.h  remote_controler.cpp  remote_controler.h  speaker.cpp  speaker.h  track_motor.cpp  track_motor.h  website.cpp  website.h  weight_sensor.cpp  weight_sensor.h
RoboticsTesting/: RoboticsTesting.vcxproj  test.cpp
RoboticsTesting/Images/: IMG20230516092604.xml  IMG20230516092607.xml  IMG20230516092618.xml  IMG20230516092634.xml  IMG20230516092641.xml  IMG20230516092645.xml  IMG20230516092649.xml  IMG20230516092653.xml  IMG20230516092657.xml  IMG20230516092701.xml  IMG20230516092703.xml  IMG20230516092707.xml  IMG20230516092711.xml  IMG20230516092714.xml  IMG20230516092719.xml  IMG20230516092724.xml  IMG20230516092729.xml  IMG20230516092732.xml  IMG20230516092735.xml  IMG20230516092737.xml  IMG20230516092739.xml  IMG20230516092744.xml  IMG20230516092745.xml  IMG20230516092748.xml  IMG20230516092751.xml  IMG20230516092754.xml  IMG20230516092758.xml
Tests/: Tests.vcxproj
